Bug 1798500: Support accessibility.force_disabled=-1 for ATK. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D161099